--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
         "@babel/core": "^7.8.7",
         "@babel/preset-env": "^7.8.7",
         "@babel/preset-react": "^7.8.3",
+        "@fortawesome/fontawesome-svg-core": "^1.2.35",
+        "@fortawesome/free-regular-svg-icons": "^5.15.3",
+        "@fortawesome/free-solid-svg-icons": "^5.15.3",
+        "@fortawesome/react-fontawesome": "^0.1.14",
         "bootstrap": "^4.6.0",
         "clean-webpack-plugin": "^3.0.0",
         "eslint": "^6.8.0",
@@ -24,6 +28,7 @@
         "popper.js": "^1.16.1",
         "react-bootstrap": "^1.5.2",
         "style-loader": "^1.1.3",
+        "victory": "^35.5.1",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.10.3"
     },
