--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
         "react-bootstrap": "^1.5.2",
+        "react-router-dom": "^5.2.0",
         "style-loader": "^1.1.3",
         "victory": "^35.5.1",
         "webpack-cli": "^3.3.11",
