--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
         "jquery": "^3.5.0",
         "jshint": "^2.11.0",
         "lodash": "^4.17.19",
+        "moment-duration-format": "^2.3.2",
         "popper.js": "^1.16.1",
         "react-bootstrap": "^1.5.2",
+        "react-moment": "^1.1.1",
         "react-router-dom": "^5.2.0",
         "style-loader": "^1.1.3",
         "victory": "^35.5.1",
@@ -48,7 +50,7 @@
         "html-webpack-plugin": "^3.2.0",
         "image-webpack-loader": "^6.0.0",
         "mini-css-extract-plugin": "^0.9.0",
-        "node-sass": "^4.5.3",
+        "node-sass": "^4.14.1",
         "postcss-cli": "^7.1.0",
         "postcss-cssnext": "^3.1.0",
         "postcss-extend": "^1.0.5",
