--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "moment-duration-format": "^2.3.2",
         "popper.js": "^1.16.1",
         "react-bootstrap": "^1.5.2",
+        "react-fontawesome": "^1.7.1",
+        "react-icons": "^4.2.0",
         "react-moment": "^1.1.1",
         "react-router-dom": "^5.2.0",
         "style-loader": "^1.1.3",
