--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "@fortawesome/free-regular-svg-icons": "^5.15.3",
         "@fortawesome/free-solid-svg-icons": "^5.15.3",
         "@fortawesome/react-fontawesome": "^0.1.14",
+        "@nivo/bar": "^0.68.0",
+        "@nivo/core": "^0.68.0",
         "bootstrap": "^4.6.0",
         "clean-webpack-plugin": "^3.0.0",
         "eslint": "^6.8.0",
@@ -26,6 +28,7 @@
         "jshint": "^2.11.0",
         "lodash": "^4.17.19",
         "moment-duration-format": "^2.3.2",
+        "nivo": "^0.31.0",
         "popper.js": "^1.16.1",
         "react-bootstrap": "^1.5.2",
         "react-fontawesome": "^1.7.1",
@@ -33,11 +36,11 @@
         "react-moment": "^1.1.1",
         "react-router-dom": "^5.2.0",
         "style-loader": "^1.1.3",
-        "victory": "^35.5.1",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.10.3"
     },
     "devDependencies": {
+        "@nivo/pie": "^0.68.0",
         "babel-cli": "^6.18.0",
         "babel-core": "^6.26.3",
         "babel-loader": "^8.0.6",
