--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
         "@fortawesome/free-solid-svg-icons": "^5.15.3",
         "@fortawesome/react-fontawesome": "^0.1.14",
         "@nivo/bar": "^0.68.0",
+        "@nivo/calendar": "^0.68.0",
         "@nivo/core": "^0.68.0",
+        "@nivo/generators": "^0.68.0",
+        "@storybook/addon-actions": "^6.2.9",
+        "@storybook/addon-knobs": "^6.2.9",
+        "@storybook/react": "^6.2.9",
         "bootstrap": "^4.6.0",
         "clean-webpack-plugin": "^3.0.0",
         "eslint": "^6.8.0",
