--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "scripts": {
         "start": "webpack-dev-server --mode development --open",
         "build": "webpack --mode production",
-        "dev": "webpack --mode development"
+        "dev": "webpack --mode development",
+        "deploy": "npm run build && gh-pages -d dist"
     },
     "keywords": [],
     "private": true,
